# katori

./: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  REWRITE_TODO.md  move_to_async.md
.github/workflows/: rust.yml
gdbadapter/: Cargo.toml  README.md
gdbadapter/src/: commands.rs  communication.rs  events.rs  lib.rs  parser.rs  process.rs  types.rs
gdbadapter/tests/: integration_tests.rs
katori-gui/: Cargo.toml
katori-gui/src/: app.rs  commands.rs  lib.rs  state.rs  ui.rs
katori-gui/syntax/: arm.sublime-syntax
katori-gui/tests/: gui_integration_tests.rs
src/: main.rs
