[package]
name = "gdbadapter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
regex = "1.5"
thiserror = "1.0"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "consoleapi"] }

[dev-dependencies]
tokio-test = "0.4"
