[package]
name = "katori-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = { version = "0.27", default-features = true, features = ["default_fonts"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
simple_logger = "4.3"

gdbadapter = { path = "../gdbadapter" }
