[package]
name = "katori-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.32"
eframe = { version = "0.32", default-features = true, features = ["default_fonts"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
simple_logger = "4.3"

gdbadapter = { path = "../gdbadapter" }
egui_extras = { version = "0.32.0", features = ["syntect"] }
syntect = "5.2.0"
